--- a/requirements.txt
+++ b/requirements.txt
@@ -171,7 +171,7 @@ python-dotenv==1.0.1
 python-multipart==0.0.12
 python-slugify==8.0.4
 pytz==2024.2
-pywin32==306
+# pywin32==306
 PyYAML==6.0.2
 pyzmq==26.2.0
 referencing==0.35.1
