--- a/requirements.txt
+++ b/requirements.txt
@@ -229,7 +229,7 @@ webencodings==0.5.1
 websocket-client==1.8.0
 websockets==12.0
 Werkzeug==3.0.4
-windows-curses==2.3.3
+# windows-curses==2.3.3
 wrapt==1.16.0
 xyzservices==2024.9.0
 yarl==1.14.0
